# embedding-book

./: .gitignore  AGENTS.md  LICENSE  README.md  myst.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
book/: 00-preface.md  index.md
book/01-foundations/: 01-what-are-embeddings.md  02-vectors-norms-angles.md  03-distance-and-similarity.md  04-vector-length.md  05-high-dimensional-geometry.md
book/02-learning/: 06-embedding-lookup.md  07-embeddings-from-prediction.md  08-contrastive-learning.md  09-objectives-shape-spaces.md
book/03-transformations/: 10-linear-and-nonlinear-layers.md
book/04-embedding-layer/: 11-parameter-count-memory.md  12-factorized-embeddings.md  13-clustering-canonical-token-ids.md  14-quantization-compression.md
book/05-retrieval/: 15-retrieval-as-geometry.md  16-ann-indexes-and-metrics.md  17-evaluating-embedding-models.md  18-hybrid-retrieval-reranking.md
book/06-visualization/: 19-visualizing-embeddings.md  20-directions-analogies-concepts.md  21-anisotropy-whitening-space-surgery.md
book/07-applications/: 22-token-embeddings-language-models.md  23-sentence-embeddings-rag.md  24-recommender-system-embeddings.md  25-graph-and-entity-embeddings.md
book/08-advanced/: 26-embeddings-as-matrix-factorization.md  27-probabilistic-views.md  28-designing-embedding-experiments.md
book/appendices/: a-notation.md  b-pytorch-recipes.md  c-visualization-recipes.md
notebooks/: 01_distance_metrics.ipynb  02_factorized_embeddings.ipynb  03_linear_relu_geometry.ipynb
scripts/: generate_figures.py
(+3 files in other folders)
