[project]
name = "embedding-book"
version = "0.1.0"
description = "Embeddings: Geometry, Learning, and Retrieval"
authors = [
  { name = "Sanjaya Subedi" }
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "numpy>=2.0,<3.0",
  "matplotlib>=3.9,<4.0",
  "torch>=2.4,<3.0",
  "jupyter>=1.1,<2.0",
]

[tool.poetry]
packages = [{ include = "embedding_book", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
